--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,6 @@
     font-weight: 400;
   }
   .modal-box {
-    background-color: #fff !important;
+    background-color: #f3f4f6 !important;
   }
 }
